Fix bug where text in tweet would overflow

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -4,6 +4,7 @@ article.tweet {
   padding: 1em;
   margin: 1em;
   width: 60%;
+  word-wrap: break-word;
 }
 
 article.tweet:hover {
